--- a/projects/demo.html
+++ b/projects/demo.html
@@ -2,8 +2,68 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <style>
+        	table{
+        		width: 500px;
+        		border-collapse: collapse;
+        	}
+        	td,th{
+               border: 3px solid #ccc;
+               text-align: center;
+               padding: 20px;  
+        	}
+        	th{
+        		background-color: blue;
+        		color: #fff; 
+        	}
+        </style>
     </head>
     <body>
-    直播14班强无敌
+    <table>
+    	<thead>
+    		<tr>
+    			<th>学号</th>
+    			<th>姓名</th>
+    			<th>性别</th>
+    			<th>语文</th>
+    			<th>数学</th>
+    			<th>英语</th>
+    		</tr>
+    	</thead>
+    	<tbody>
+    		   <tr>
+    		   	<td>01</td>
+    		   	<td>张三</td>
+    		   	<td>男</td>
+    		   	<td>60</td>
+    		   	<td>70</td>
+    		   	<td>80</td>
+    		   </tr>
+    		   <tr>
+    		   	<td>02</td>
+    		   	<td>李四</td>
+    		   	<td>男</td>
+    		   	<td>70</td>
+    		   	<td>90</td>
+    		   	<td>100</td>
+    		   </tr>
+    		   <tr>
+    		   	<td>03</td>
+    		   	<td>陈红</td>
+    		   	<td>女</td>
+    		   	<td>90</td>
+    		   	<td>90</td>
+    		   	<td>100</td>
+    		   </tr>
+    		   <tr>
+    		   	<td>04</td>
+    		   	<td>王二</td>
+    		   	<td>男</td>
+    		   	<td>80</td>
+    		   	<td>100</td>
+    		   	<td>90</td>
+    		   </tr>
+    	</tbody>
+    </table>
     </body>
 </html>
