--- a/projects/2.html
+++ b/projects/2.html
@@ -1,9 +1,63 @@
-<!doctype html>
-<html>
-	<head>
-	<meta charset="utf-8">	
-	</head>
-	<body>
-
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <title>我的项目</title>
+     <style>
+          body,h1,h2,h3,h4,h5,h6,ul,li,dl,dt,dd{
+               margin: 0;
+               padding: 0;
+          }
+          body {
+            font-family: '微软雅黑', Arial;
+            font-size: 14px;
+            color: #999;
+            text-align: center; 
+            line-height: 2;
+            background-color: #FFF2E3;
+          }
+          a {
+               text-decoration: none;
+          }
+    .btn {
+     background-color: #72b890;
+     color: #fff;
+     padding: 5px;
+     margin: 10px 4px;
+     line-height: 1;
+     display: inline-block;
+     border-radius: 3px;
+    }
+    .abc {
+     width: 400px;
+     margin: 40px 0 40px 0;
+    }
+    .author a {
+     color: #72b890;
+    }
+    h1 {
+      margin: 50px 0;
+    }
+     </style>
+</head>
+<body>
+     <h1 class="title">我的项目</h1>
+     <p class="description">一句话项目介绍</p>
+     <div class="tabs">
+          <a class="btn" href="#">项目1</a>
+          <a class="btn" href="#">项目2</a>
+          <a class="btn" href="#">项目3</a>
+          <a class="btn" href="#">项目4</a>
+          <a class="btn" href="#">项目5</a>
+     </div>
+     <img class="abc" src="http://7xpvnv.com2.z0.glb.qiniucdn.com/65d4aba2-a097-4b24-aaa0-ebbaf7eedab2" alt="">
+     <div class="action">
+          <a class="btn" href="#">查看编码</a>
+          <a class="btn" href="#">使用说明</a>
+     </div>
+     <div class="author">
+          作者：
+          <a href="#">酷鼠</a>
+     </div>
+</body>
 </html>
