--- a/projects/9.html
+++ b/projects/9.html
@@ -1,205 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    	 <nav>
-    		<div class="navbar">
-    			<img class="image" src="http://ww1.sinaimg.cn/large/0069jr7igy1fijb082jmvj308c04lq2x.jpg" alt="">
-	    		<ul>
-	    			<li><a href="#">游戏资料</a></li>
-	    			<li><a href="#">商城/合作</a></li>
-	    			<li><a href="#">用户互动</a></li>
-	    			<li><a href="#">赛事中心</a></li>
-	    			<li><a href="#">自助系统</a></li>
-	    		</ul>
-    		</div>
-    	</nav>
-    	<header>
-    		<div class="header-v">
-    			<h3>Welcome To Our Studio!</h3>
-    			<h1>IT'S NICE TO MEET YOU</h1>
-    			<a class="btn" href="#">Tell Me More</a>
-    		</div>
-    	</header>
-    	<section class="section-a">
-	    	<div class="zi">
-	    		<h2>SERVICES</h2>
-	    		<h3>Lorem ipsum dolor sit amet consectetur.</h3>
-	    	</div>
-	    	<div class="zong">
-	    		<div class="fu">
-	    			<a href="#"></a>
-	    			<h4>E-Commerce</h4>
-	    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-	    		</div>
-	    		<div class="fu">
-	    			<a href="#"></a>
-	    			<h4>Responsive Design</h4>
-	    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-	    		</div>
-	    		<div class="fu">
-	    			<a href="#"></a>
-	    			<h4>Web Security</h4>
-	    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-	    		</div>
-	    	</div>
-    	</section>
-    	<section>
-    		<div>
-	    		<h2>PORTFOLIO</h2>
-	    		<h3>Lorem ipsum dolor sit amet consectetur.</h3>
-	    	</div>
-	    	<div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4>Round Icons</h4>
-	    			<p>Graphic Design</p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4>Round Icons</h4>
-	    			<p>Graphic Design</p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4>Round Icons</h4>
-	    			<p>Graphic Design</p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4>Round Icons</h4>
-	    			<p>Graphic Design</p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4>Round Icons</h4>
-	    			<p>Graphic Design</p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4>Round Icons</h4>
-	    			<p>Graphic Design</p>
-	    		</div>
-	    	</div>
-    	</section>
-    	<section>
-    		<div>
-	    		<h2>ABOUT</h2>
-	    		<h3>Lorem ipsum dolor sit amet consectetur.</h3>
-	    	</div>
-	    	<div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    		</div>
-	    	</div>
-    	</section>
-    	<section>
-    		<div>
-	    		<h2>OUR AMAZING TEAM</h2>
-	    		<h3>Lorem ipsum dolor sit amet consectetur.</h3>
-	    	</div>
-	    	<div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    			<ul>
-	    				<li></li>
-	    				<li></li>
-	    				<li></li>
-	    			</ul>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    			<ul>
-	    				<li></li>
-	    				<li></li>
-	    				<li></li>
-	    			</ul>
-	    		</div>
-	    		<div>
-	    			<img src="" alt="">
-	    			<h4></h4>
-	    			<p></p>
-	    			<ul>
-	    				<li></li>
-	    				<li></li>
-	    				<li></li>
-	    			</ul>
-	    		</div>
-	    	</div>
-	    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-    	</section>
-    	<section>
-    		<ul>
-    			<li><img src="" alt=""></li>
-    			<li><img src="" alt=""></li>
-    			<li><img src="" alt=""></li>
-    			<li><img src="" alt=""></li>
-    		</ul>
-    	</section>
-    	<section>
-    		<div>
-    			<h2>CONTACT US</h2>
-    			<h3>Lorem ipsum dolor sit amet consectetur.</h3>
-    		</div>
-    		<div>
-    			<form action="#" method="get">
-    				<div>
-    					<input type="text" name="name" placeholder="YOUR NAME*">
-    					<input type="text" name="email" placeholder="Your Email *">
-    					<input type="text" name="message" placeholder="Your Message *">
-    					<textarea name="" id="message" placeholder="Your Message *">
-    					</textarea>
-    					<div>
-    						<input type="submit" value="Send Message">
-    					</div>
-    				</div>
-    			</form>
-    		</div>
-    	</section>
-    	<footer>
-    		<ul>
-    			<li>
-    				<p>Copyright &copy; Your Website 2014</p>
-    			</li>
-    			<li>
-    				<a href="#"></a>
-    				<a href="#"></a>
-    				<a href="#"></a>
-    			</li>
-    			<li>
-    				<a href="#">Privacy Policy</a>
-    				<a href="#">Terms of Use</a>
-    			</li>
-    		</ul>
-    	</footer>
-    </body>
+<head>
+	<meta charset="UTF-8">
+	<title>登录|注册</title>
+	<link rel="stylesheet" href="http://at.alicdn.com/t/font_386484_bikg30mfvlp4lsor.css">
+	<style>
+	 * {
+	 	margin: 0;
+	 	padding: 0;
+	 	box-sizing: border-box;
+	 }
+	 html, body, main {
+	 	height: 100%;
+	 }
+	 body {
+		font: 14px/1.5 Arial;
+	 }
+	 a {
+	 	text-decoration: none;
+	 	color: #444;
+	 }
+	 main {
+   	background: linear-gradient(to right top, rgba(210,50,105,0.8), rgba(0,152,255,0.4)), url(http://ww1.sinaimg.cn/large/0069jr7igy1fjkckc7ldhj30sg0obah5.jpg) center center no-repeat;
+   	background-size: cover;
+   }
+   header {
+   	position: absolute;
+   	top: 10px;
+   	width: 100%;
+   }
+   
+   header .login {
+   	float: right;
+   	margin-right: 20px;
+   	font-size: 20px;
+   }
+   .page {
+   	display: none;
+   }
+   .modal {
+   	position: absolute;
+   	left: 50%;
+   	top: 50%;
+   	transform: translate(-50%，-50%);
+   	width: 500px;
+   	padding: 20px;
+   	background-color: #fff;
+   	box-shadow: 0px 2px 2px 4px rgba(0,0,0,0.2)
+   }
+   .modal .close {
+   	position: absolute;
+   	right: 10px;
+   	top: 10px;
+   }
+   .modal .tabs {
+   	text-align: center;
+   }
+   .modal .tabs a {
+   	display: inline-block;
+   	font-size: 16px;
+		margin: 0 10px;
+		color: #666;
+   }
+   .modal .tabs a.active {
+   	border-bottom: 2px solid #444;
+   	color: #444;
+   }
+   .modal .content {
+   	padding: 20px 40px;
+   }
+   .modal .errormsg {
+   	color: #ff9800;
+   	font-size: 12px;
+   }
+   .modal .content .input-filed {
+   	position: relative;
+   	margin-top: 10px;
+   }
+   .modal .content .input-filed .iconfont {
+   	position: absolute;
+   	left: 10px;
+   	top: 8px;
+   }
+		.modal .content input[type=text],
+		.modal .content input[type=password] {
+			width: 100%;
+			padding: 10px 10px 10px 30px;
+			outline: none;
+		}
+		.modal .content input [type=submit] {
+			padding:  6px 10px;
+			border: none;
+			background: #fff;
+			box-shadow: 0 0 2px rgba(0,0,0,0.5);
+			outline: none;
+		}
+		.page.login .modal-login,
+		.page.register .modal-register {
+			transform: translate(-50%,-50%) rotateY(0deg);
+      backface-visibility: hidden;
+      transition: all 1s;
+		}
+		.page.login .modal-register,
+		.page.register .modal-login {
+			transform: translate(-50%,-50%) rotateY(180deg);
+      backface-visibility: hidden;
+      transition: all 1s;
+		}	
+	</style>
+</head>
+<body>
+	<header>
+		<a class="login" href="#"><i class="iconfont icon-usered"></i></a>
+	</header>
+	<main>
+		<div class="page login">
+			<div class="modal modal-login">
+				<a href="#" class="close iconfont icon-close"></a>
+				<div class="tabs">
+					<a href="#" class="login active">登录</a>
+					<a href="#" class="register">注册</a>
+				</div>
+				<div class="content">
+					<div class="errormsg"></div>
+					<form action="/login" method="post">
+						<div class="input-filed">
+							<i class="iconfont icon-user"></i>
+							<input type="text" name="username" placeholder="用户名">
+						</div>
+						<div class="input-filed">
+							<i class="iconfont icon-password"></i>
+							<input type="password" name="password" placeholder="密码">
+						</div>
+						<div class="input-filed">
+							<input type="submit" value="登录">	
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="modal modal-register">
+				<a href="#" class="close iconfont icon-close"></a>
+				<div class="tabs">
+					<a href="#" class="login">登录</a>
+					<a href="#" class="register active">注册</a>
+				</div>
+				<div class="content">
+					<div class="errormsg"></div>
+					<form action="/register" method="post">
+						<div class="input-filed">
+							<i class="iconfont icon-user"></i>
+							<input type="text" name="username" placeholder="输入用户名">
+						</div>
+						<div class="input-filed">
+							<i class="iconfont icon-password"></i>
+							<input type="password" name="password" placeholder="输入密码">
+						</div>
+						<div class="input-filed">
+							<i class="iconfont icon-password"></i>
+							<input type="password" name="password2" placeholder="再次输入密码">
+						</div>
+						<div class="input-filed">
+							<input type="submit" value="注册">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</main>
+	<script>
+		function $(selector){
+			return document.querySelector(selector)
+		}
+		function $$(selector){
+			return document.querySelectorAll(selector)
+		}
+
+		$("header .login").onclick = function(e){
+			e.stopPropagation()
+			$(".page").style.display = "block"
+		}
+
+		$(".page").addEventListener("click", function(e){
+		e.stopPropagation()
+		if(e.target.classList.contains("login")){
+			$(".page").classList.remove("register")
+			$(".page").classList.add("login")
+		}
+		if(e.target.classList.contains("register")){
+			$(".page").classList.add("register")
+			$(".page").classList.remove("login")
+		}
+		console.log(e.target)
+		console.log(this)
+		window.target = e.target
+		 if(e.target.classList.contains("close")){
+        $(".page").style.display = "none"
+      }
+		})
+
+		document.addEventListener("click", function(){
+      $(".page").style.display = "none"
+    })
+
+		$(".modal-login form").addEventListener("submit", function(e){
+			e.preventDefault()
+			if(!/^\w{3,8}$/.test($(".modal-login input[name=username]").value)){
+				$(".modal-login .errormsg").innerText = "用户名需输入3-8个字符，包括字母数字下划线"
+				return false
+			}
+			if(!/^\w{6,10}$/.test($('.modal-login input[name=password]').value)){
+				$('.modal-login .errormsg').innerText = '密码需输入6-10个字符，包括字母数字下划线'
+				return false
+			}
+			this.submit()
+		})
+		$('.modal-register form').addEventListener('submit', function(e){
+      e.preventDefault()
+      if(!/^\w{3,8}$/.test($('.modal-register input[name=username]').value)){
+        $('.modal-register .errormsg').innerText = '用户名需输入3-8个字符，包括字母数字下划线'
+        return false
+      }
+      if(/^hunger$|^ruoyu$/.test($('.modal-register input[name=username]').value)){
+        $('.modal-register .errormsg').innerText = '用户名已存在'
+        return false
+      }
+      if(!/^\w{6,10}$/.test($('.modal-register input[name=password]').value)){
+        $('.modal-register .errormsg').innerText = '密码需输入6-10个字符，包括字母数字下划线'
+        return false
+      }
+      if($('.modal-register input[name=password]').value !== $('.modal-register input[name=password2]').value){
+        $('.modal-register .errormsg').innerText = '两次输入的密码不一致'
+        return false
+      }
+      this.submit()      
+    })
+	</script>
+</body>
 </html>
