--- a/projects/10.html
+++ b/projects/10.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style1.css">
-	<link rel="stylesheet" href="//at.alicdn.com/t/font_386484_asyygcv9kd9rudi.css">
+	<link rel="stylesheet" href="http://at.alicdn.com/t/font_386484_asyygcv9kd9rudi.css">
 </head>
 <body>
 	<header>
