--- a/projects/12.html
+++ b/projects/12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
