修改了文件

--- a/projects/musicplay/music1.html
+++ b/projects/musicplay/music1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="http://at.alicdn.com/t/font_382229_b2sdayq52yt1q0k9.css">
+	<link rel="stylesheet" href="//at.alicdn.com/t/font_382229_b2sdayq52yt1q0k9.css">
 	<style>
 		* {
 			margin: 0;
@@ -169,7 +169,7 @@
 
 		function getMusicList(callback){
 			var xhr = new XMLHttpRequest()
-			xhr.open("GET","/music1.json",true)
+			xhr.open("GET","music1.json", true)
 			xhr.onload = function(){
 				if((xhr.status >=200 && xhr.status <300) ||xhr.status === 304){
 					callback(JSON.parse(this.responseText))
