--- a/projects/musicplay/music1.html
+++ b/projects/musicplay/music1.html
@@ -147,9 +147,7 @@
 
 
 		getMusicList(function(list){
-			musicList = list
 			loadMusic(list[currentIndex])
-			generateList(list)
 		})
 
 		audio.ontimeupdate = function(){
@@ -158,7 +156,7 @@
 			var min = Math.floor(this.currentTime/60)
 			var sec = Math.floor(this.currentTime)%60 + ""
 			sec = sec.length === 2? sec : "0" + sec
-
+			S(".musicbox .time").innerText = min + ":" +sec
 		}
 
 
